prodigasistemas/gsan-batch#17 - Novos mapeamentos e repositorios